--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.515.0",
     "motion": "^12.18.1",
-    "next": "15.3.3",
+    "next": "^16.1.6",
     "next-sanity": "^9.12.0",
     "ogl": "^1.0.11",
     "radix-ui": "^1.4.2",
